--- a/T1.html
+++ b/T1.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Point System Website</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Epic Books Online</title> <!-- Updated site title -->
 </head>
 <body>
     <header>
-        <h1>Welcome to Point System Website</h1>
-        <p>Points: <span id="points">0</span></p>
+        <h1>Welcome to EpicBooks</h1> <!-- Updated welcome message -->
+        <p>Points: <span id="points">10</span></p>
         <div id="userStatus">
             <p>You are not logged in.</p>
             <button id="loginBtn">Login</button>
